--- a/cdpf_core_web/src/main/resources/application-database.properties
+++ b/cdpf_core_web/src/main/resources/application-database.properties
@@ -1,8 +1,8 @@
 #config DataBase params
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@10.3.32.170:1521:orcl
-#jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-jdbc.username=cdpfv1
-jdbc.password=cdpfv1
+#jdbc.url=jdbc:oracle:thin:@10.3.32.170:1521:orcl
+jdbc.url=jdbc:oracle:thin:@192.168.109.136:1521:orcl
+jdbc.username=c##cdpf
+jdbc.password=cdpf
 jdbc.initialSize=2
 jdbc.maxActive=10
