--- a/cdpf_example_web/src/main/resources/application-database.properties
+++ b/cdpf_example_web/src/main/resources/application-database.properties
@@ -1,8 +1,8 @@
 #config DataBase params
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@localhost:1521:orcl
-jdbc.username=c##cri
-jdbc.password=cri
+jdbc.username=c##cdpf
+jdbc.password=cdpf
 jdbc.initialSize=2
 jdbc.maxActive=10
 
